# PW_HW_04

./: Dockerfile  README.md  main.py  pyproject.toml  routes.py
controllers/: MainController.py
core/: server.py  soketServer.py  storage.py
frontend/components/: footer.html
