[tool.poetry]
name = "pw-hw-04"
version = "0.1.0"
description = ""
authors = ["Weiss1985 <weiss1985@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start-server = "main:main"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
